git lfs passing tests